--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,42 @@
 # VSCode
 .vscode/
+# Environment files
+.env
+# Database files
+.db
+.json
+.sqlite3
+
+# Node modules
+node_modules/
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Logs
+*.log
+logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Build output
+dist/
+build/
+out/
+
+# Coverage reports
+coverage/
+*.lcov
+
+# IDE files
+.idea/
+*.suo
+*.user
