chore: update .env.example with additional commented-out Google API keys for reference

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # GOOGLE_API_KEY=AIzaSyBTlLXSLeKgAB_t_jiQML1y6bw3CZI9DfY
+    # "AIzaSyCC1fFdO9n3UC10lsv-61IICavfl-b_nUk",
+    # "AIzaSyB0jD7w966Vio3Xlk7F6BahQsqubKbya2o",
+    # "AIzaSyDxfksrt47XbKnqlin-th5vqjEtLGzwr4A",
 # DATABASE_URL=sqlite+aiosqlite:///./data/app.db
 # ANONYMIZED_TELEMETRY=False
